--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ p
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	background: url(./img0.jpg);
+	background: url(./img1.jpeg);
 	background-size: cover;
 }
 
