--- a/style.css
+++ b/style.css
@@ -15,6 +15,38 @@ p
 	color: #111;
 }
 
+.tabs {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+}
+
+.tabs li {
+  margin-right: 20px;
+}
+
+.tabs a {
+  text-decoration: none;
+  color: #333;
+}
+
+.tabs a:hover {
+  color: #666;
+}
+
+.tab-content {
+  padding: 20px;
+}
+
+.tab-content div {
+  display: none;
+}
+
+.tab-content div:target {
+  display: block;
+}
+
 .banner
 {
 	position: relative;
